@startuml
class BaseDTO <<partial>> {
}
class PropertyDTO {
}
class ObjectDTO {
}
class TypeDTO {
}
class BaseTypes <<static>> <<partial>> {
    + {static} Dispatch(dto:CommandDTO) : CommandDTO
}
class BaseTypes <<static>> <<partial>> {
    + {static} GetTypes(commandTypes:List<CommandTypeDTO>) : void
}
class "List`1"<T> {
}
BaseDTO --> "TypeId" Guid
BaseDTO --> "Id" Guid
BaseDTO --> "Type" Guid
PropertyDTO --> "TypeId" Guid
PropertyDTO --> "Name" String
PropertyDTO --> "Value" ValueDTO
BaseDTO <|-- ObjectDTO
ObjectDTO --> "TypeId" Guid
ObjectDTO --> "Properties<PropertyDTO>" "List`1"
BaseDTO <|-- TypeDTO
TypeDTO --> "TypeId" Guid
@enduml
